--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -11,9 +11,19 @@
         "id": "4z5fSB_scFyJ",
         "outputId": "dfd0b2c3-5823-44a0-b6e1-de1749fc90f5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package wordnet to /home/dip07/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n",
+            "[nltk_data] Downloading package stopwords to /home/dip07/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
+          ]
+        }
+      ],
       "source": [
-        "import re\n",
         "import nltk\n",
         "\n",
         "import pandas as pd\n",
@@ -25,9 +35,8 @@
         "from sklearn.metrics import accuracy_score\n",
         "from sklearn.metrics import classification_report, confusion_matrix\n",
         "from sklearn.metrics import ConfusionMatrixDisplay\n",
+        "from pre_process_dataset import PreProcess\n",
         "\n",
-        "from nltk.stem import WordNetLemmatizer\n",
-        "from nltk.corpus import stopwords\n",
         "import matplotlib as mpl\n",
         "mpl.rcParams.update(mpl.rcParamsDefault)\n",
         "# mpl.rcParams[\"text.usetex\"] = True\n",
@@ -37,38 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "[nltk_data] Downloading package wordnet to /home/dip07/nltk_data...\n",
-            "[nltk_data]   Package wordnet is already up-to-date!\n",
-            "[nltk_data] Downloading package stopwords to /home/dip07/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "nltk.download('wordnet')\n",
-        "nltk.download('stopwords')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -91,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -164,7 +142,7 @@
               "3                4          cardiovascular diseases  cardiovascular"
             ]
           },
-          "execution_count": 49,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -179,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -197,69 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>condition_label</th>\n",
-              "      <th>medical_abstract</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>0</td>\n",
-              "      <td>tissue changes around loose prostheses. a cani...</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   condition_label                                   medical_abstract\n",
-              "0                0  tissue changes around loose prostheses. a cani..."
-            ]
-          },
-          "execution_count": 6,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "#Cleaning text\n",
-        "def clean_text(t):\n",
-        "    \"\"\"Lowercase, remove non-alphanumeric chars (keep punctuation minimally).\"\"\"\n",
-        "    t = str(t).lower()\n",
-        "    t = re.sub(r'[^a-z0-9\\s\\-.,]', ' ', t)\n",
-        "    t = re.sub(r'\\s+', ' ', t).strip()\n",
-        "    return t\n",
-        "df[\"medical_abstract\"] = df[\"medical_abstract\"].apply(clean_text)\n",
-        "df.head(1)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -302,30 +218,20 @@
               "0                0  tissue change around loose prosthesis canine m..."
             ]
           },
-          "execution_count": 7,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "def preprocess_text(text):\n",
-        "    lemmatizer = WordNetLemmatizer()\n",
-        "    stop_words = set(stopwords.words('english')).union(\n",
-        "        {'patient', 'doctor', 'report', 'normal', 'exam'}\n",
-        "    )\n",
-        "    tokens = nltk.word_tokenize(text.lower())\n",
-        "    tokens = [word for word in tokens if word.isalpha()]  # remove punctuation/numbers\n",
-        "    tokens = [lemmatizer.lemmatize(word) for word in tokens if word not in stop_words]\n",
-        "\n",
-        "    return \" \".join(tokens)\n",
-        "\n",
-        "df[\"medical_abstract\"] = df[\"medical_abstract\"].apply(preprocess_text)\n",
+        "clean_df = PreProcess(df)\n",
+        "df = clean_df.preprocess_dataset()\n",
         "df.head(1)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -343,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -368,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -383,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -425,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -445,10 +351,15 @@
               " 0.6126500461680517,\n",
               " 0.6140350877192983,\n",
               " 0.6135734072022161,\n",
-              " 0.6223453370267775]"
+              " 0.6223453370267775,\n",
+              " 0.6195752539242844,\n",
+              " 0.6144967682363804,\n",
+              " 0.6200369344413665,\n",
+              " 0.6163434903047091,\n",
+              " 0.6144967682363804]"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -459,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -489,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -513,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -547,7 +458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -579,17 +490,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "array(['neoplasms', 'digestive', 'nervous', 'cardiovascular', 'general'],\n",
+              "array(['general', 'neoplasms', 'digestive', 'nervous', 'cardiovascular'],\n",
               "      dtype=object)"
             ]
           },
-          "execution_count": 45,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
