--- a/GPT_prompts.ipynb
+++ b/GPT_prompts.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "id": "5515898b",
    "metadata": {},
    "outputs": [
@@ -175,6 +175,7 @@
     "df_balanced = df.groupby('condition_label').sample(n=20, random_state=42)\n",
     "df_filtered = df[~df.index.isin(df_balanced.index)]\n",
     "df_balanced = df_balanced.sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "#commented the line below. We do not want the csv file to change since it is manually passed to ChatGPT.\n",
     "# df_balanced.to_csv(os.path.join(\"prompts\", \"Balanced_GPT_input.csv\"))\n",
     "df_balanced"
    ]
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "id": "e934c229",
    "metadata": {},
    "outputs": [],
@@ -207,13 +208,14 @@
     "        notes.append(note)\n",
     "    new_prompt = update_prompt + \"\\n\".join(notes)\n",
     "    file_name = os.path.join(folder_path, str(index+1)+\".csv\")\n",
+    "    #commented the line below. We do not want the csv file to change since it is manually passed to ChatGPT.\n",
     "    # with open(file_name, 'w', newline='') as f:\n",
     "    #     f.write(new_prompt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "id": "7a400a16",
    "metadata": {},
    "outputs": [
@@ -238,6 +240,7 @@
     "df_unbalanced = df_filtered.sample(n=100, random_state=42)\n",
     "df_filtered = df_filtered[~df_filtered.index.isin(df_unbalanced.index)]\n",
     "df_unbalanced = df_unbalanced.sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "#commented the line below. We do not want the csv file to change since it is manually passed to ChatGPT.\n",
     "# df_unbalanced.to_csv(os.path.join(\"prompts\", \"Unbalanced_GPT_input.csv\"))\n",
     "df_unbalanced.groupby(\"condition_label\").size()"
    ]
@@ -256,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "id": "2bfae68e",
    "metadata": {},
    "outputs": [],
@@ -270,6 +273,7 @@
     "        notes.append(note)\n",
     "    new_prompt = update_prompt + \"\\n\".join(notes)\n",
     "    file_name = os.path.join(folder_path, str(index+1)+\".csv\")\n",
+    "    #commented the line below. We do not want the csv file to change since it is manually passed to ChatGPT.\n",
     "    # with open(file_name, 'w', newline='') as f:\n",
     "    #     f.write(new_prompt)"
    ]
@@ -419,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "id": "f5b2465c",
    "metadata": {},
    "outputs": [
@@ -444,7 +448,8 @@
     "df_unbalanced_with_example = df_filtered.sample(n=100, random_state=42)\n",
     "df_filtered = df_filtered[~df_filtered.index.isin(df_unbalanced_with_example.index)]\n",
     "df_unbalanced_with_example = df_unbalanced_with_example.sample(frac=1, random_state=42).reset_index(drop=True)\n",
-    "df_unbalanced_with_example.to_csv(os.path.join(\"prompts\", \"Unbalanced_GPT_input_with_examples.csv\"))\n",
+    "#commented the line below. We do not want the csv file to change since it is manually passed to ChatGPT.\n",
+    "# df_unbalanced_with_example.to_csv(os.path.join(\"prompts\", \"Unbalanced_GPT_input_with_examples.csv\"))\n",
     "df_unbalanced_with_example.groupby(\"condition_label\").size()"
    ]
   },
@@ -462,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "id": "c4d97198",
    "metadata": {},
    "outputs": [],
@@ -475,8 +480,9 @@
     "        notes.append(note)\n",
     "    new_prompt_example = new_prompt + \"\\n\".join(notes)\n",
     "    file_name = os.path.join(folder_path, str(index+1)+\".csv\")\n",
-    "    with open(file_name, 'w', newline='') as f:\n",
-    "        f.write(new_prompt_example)"
+    "    #commented the line below. We do not want the csv file to change since it is manually passed to ChatGPT.\n",
+    "    # with open(file_name, 'w', newline='') as f:\n",
+    "    #     f.write(new_prompt_example)"
    ]
   }
  ],
