Commented the hyperparameter tuning

--- a/GPT.ipynb
+++ b/GPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 1,
    "id": "a7509b28",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "id": "9b600923",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "4                0  general pathological conditions"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 3,
    "id": "b97ff32f",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        "(100, 2)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "id": "3c75bd10",
    "metadata": {},
    "outputs": [
@@ -152,28 +152,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>fasciculations due to verapamil in a patient w...</td>\n",
+       "      <td>general pathological conditions</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>trends in thirty years of vaginal hysterectomy...</td>\n",
+       "      <td>neoplasms</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>a phase ii clinical trial of carboplatin infus...</td>\n",
+       "      <td>neoplasms</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>41</th>\n",
        "      <td>squamous cell carcinomas often produce more th...</td>\n",
        "      <td>neoplasms</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>intestinal pseudoobstruction secondary to amyl...</td>\n",
-       "      <td>digestive system diseases</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>neurologic complications of alcoholism. neurol...</td>\n",
-       "      <td>nervous system diseases</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>can nurses perform surgical cricothyrotomy wit...</td>\n",
-       "      <td>general pathological conditions</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>fasciculations due to verapamil in a patient w...</td>\n",
+       "      <th>49</th>\n",
+       "      <td>lung lobe torsion following lobectomy. three c...</td>\n",
        "      <td>general pathological conditions</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -182,21 +182,21 @@
       ],
       "text/plain": [
        "                                     medical_abstract  \\\n",
-       "41  squamous cell carcinomas often produce more th...   \n",
-       "45  intestinal pseudoobstruction secondary to amyl...   \n",
-       "10  neurologic complications of alcoholism. neurol...   \n",
-       "91  can nurses perform surgical cricothyrotomy wit...   \n",
        "71  fasciculations due to verapamil in a patient w...   \n",
+       "32  trends in thirty years of vaginal hysterectomy...   \n",
+       "84  a phase ii clinical trial of carboplatin infus...   \n",
+       "41  squamous cell carcinomas often produce more th...   \n",
+       "49  lung lobe torsion following lobectomy. three c...   \n",
        "\n",
        "                     condition_name  \n",
+       "71  general pathological conditions  \n",
+       "32                        neoplasms  \n",
+       "84                        neoplasms  \n",
        "41                        neoplasms  \n",
-       "45        digestive system diseases  \n",
-       "10          nervous system diseases  \n",
-       "91  general pathological conditions  \n",
-       "71  general pathological conditions  "
+       "49  general pathological conditions  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "id": "1eca0531",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "(100, 2)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "id": "0a138972",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "(100, 2)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 7,
    "id": "10329871",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "(100, 2)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "id": "070569f5",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        "(100, 2)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 9,
    "id": "28ed7d20",
    "metadata": {},
    "outputs": [
@@ -375,25 +375,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>expression of class ii molecules on intestinal...</td>\n",
-       "      <td>neoplasms</td>\n",
-       "      <td>expression of class ii molecules on intestinal...</td>\n",
-       "      <td>digestive system diseases</td>\n",
+       "      <th>93</th>\n",
+       "      <td>interleukin-2-induced lung permeability is med...</td>\n",
+       "      <td>cardiovascular diseases</td>\n",
+       "      <td>interleukin-2-induced lung permeability is med...</td>\n",
+       "      <td>general pathological conditions</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>future directions in vasodilator therapy for h...</td>\n",
-       "      <td>cardiovascular diseases</td>\n",
-       "      <td>future directions in vasodilator therapy for h...</td>\n",
-       "      <td>cardiovascular diseases</td>\n",
+       "      <th>15</th>\n",
+       "      <td>ptychotropism as a cutaneous feature of the ch...</td>\n",
+       "      <td>general pathological conditions</td>\n",
+       "      <td>ptychotropism as a cutaneous feature of the ch...</td>\n",
+       "      <td>general pathological conditions</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>biopsy of the breast for mammographically dete...</td>\n",
-       "      <td>neoplasms</td>\n",
-       "      <td>biopsy of the breast for mammographically dete...</td>\n",
-       "      <td>neoplasms</td>\n",
+       "      <th>59</th>\n",
+       "      <td>regional changes in creatine kinase and myocyt...</td>\n",
+       "      <td>cardiovascular diseases</td>\n",
+       "      <td>regional changes in creatine kinase and myocyt...</td>\n",
+       "      <td>cardiovascular diseases</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -401,27 +401,27 @@
       ],
       "text/plain": [
        "                                   medical_abstract_x  \\\n",
-       "50  expression of class ii molecules on intestinal...   \n",
-       "0   future directions in vasodilator therapy for h...   \n",
-       "22  biopsy of the breast for mammographically dete...   \n",
+       "93  interleukin-2-induced lung permeability is med...   \n",
+       "15  ptychotropism as a cutaneous feature of the ch...   \n",
+       "59  regional changes in creatine kinase and myocyt...   \n",
        "\n",
-       "             condition_name  \\\n",
-       "50                neoplasms   \n",
-       "0   cardiovascular diseases   \n",
-       "22                neoplasms   \n",
+       "                     condition_name  \\\n",
+       "93          cardiovascular diseases   \n",
+       "15  general pathological conditions   \n",
+       "59          cardiovascular diseases   \n",
        "\n",
        "                                   medical_abstract_y  \\\n",
-       "50  expression of class ii molecules on intestinal...   \n",
-       "0   future directions in vasodilator therapy for h...   \n",
-       "22  biopsy of the breast for mammographically dete...   \n",
+       "93  interleukin-2-induced lung permeability is med...   \n",
+       "15  ptychotropism as a cutaneous feature of the ch...   \n",
+       "59  regional changes in creatine kinase and myocyt...   \n",
        "\n",
-       "        condition_name_output  \n",
-       "50  digestive system diseases  \n",
-       "0     cardiovascular diseases  \n",
-       "22                  neoplasms  "
+       "              condition_name_output  \n",
+       "93  general pathological conditions  \n",
+       "15  general pathological conditions  \n",
+       "59          cardiovascular diseases  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 10,
    "id": "8b3817d7",
    "metadata": {},
    "outputs": [
@@ -466,25 +466,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>late effects of paralytic poliomyelitis in olm...</td>\n",
-       "      <td>nervous system diseases</td>\n",
-       "      <td>late effects of paralytic poliomyelitis in olm...</td>\n",
+       "      <th>64</th>\n",
+       "      <td>use of a knee-brace for control of tibial tran...</td>\n",
+       "      <td>general pathological conditions</td>\n",
+       "      <td>use of a knee-brace for control of tibial tran...</td>\n",
+       "      <td>general pathological conditions</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>eosinophilia-myalgia syndrome (l-tryptophan-as...</td>\n",
+       "      <td>general pathological conditions</td>\n",
+       "      <td>eosinophilia-myalgia syndrome (l-tryptophan-as...</td>\n",
        "      <td>nervous system diseases</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>arrhythmias in patients with chf. should they ...</td>\n",
+       "      <th>42</th>\n",
+       "      <td>ventricular ectopy: significance and managemen...</td>\n",
+       "      <td>general pathological conditions</td>\n",
+       "      <td>ventricular ectopy: significance and management.</td>\n",
        "      <td>cardiovascular diseases</td>\n",
-       "      <td>arrhythmias in patients with chf. should they ...</td>\n",
-       "      <td>cardiovascular diseases</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>nasal midline masses in infants and children. ...</td>\n",
-       "      <td>nervous system diseases</td>\n",
-       "      <td>nasal midline masses in infants and children...</td>\n",
-       "      <td>neoplasms</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -492,22 +492,27 @@
       ],
       "text/plain": [
        "                                   medical_abstract_x  \\\n",
-       "46  late effects of paralytic poliomyelitis in olm...   \n",
-       "88  arrhythmias in patients with chf. should they ...   \n",
-       "12  nasal midline masses in infants and children. ...   \n",
+       "64  use of a knee-brace for control of tibial tran...   \n",
+       "18  eosinophilia-myalgia syndrome (l-tryptophan-as...   \n",
+       "42  ventricular ectopy: significance and managemen...   \n",
        "\n",
-       "             condition_name  \\\n",
-       "46  nervous system diseases   \n",
-       "88  cardiovascular diseases   \n",
-       "12  nervous system diseases   \n",
+       "                     condition_name  \\\n",
+       "64  general pathological conditions   \n",
+       "18  general pathological conditions   \n",
+       "42  general pathological conditions   \n",
        "\n",
-       "                                   medical_abstract_y    condition_name_output  \n",
-       "46  late effects of paralytic poliomyelitis in olm...  nervous system diseases  \n",
-       "88  arrhythmias in patients with chf. should they ...  cardiovascular diseases  \n",
-       "12    nasal midline masses in infants and children...                neoplasms  "
+       "                                   medical_abstract_y  \\\n",
+       "64  use of a knee-brace for control of tibial tran...   \n",
+       "18  eosinophilia-myalgia syndrome (l-tryptophan-as...   \n",
+       "42   ventricular ectopy: significance and management.   \n",
+       "\n",
+       "              condition_name_output  \n",
+       "64  general pathological conditions  \n",
+       "18          nervous system diseases  \n",
+       "42          cardiovascular diseases  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 11,
    "id": "9ccce921",
    "metadata": {},
    "outputs": [
@@ -552,25 +557,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>the relationship of \"high risk\" mammographic p...</td>\n",
+       "      <th>65</th>\n",
+       "      <td>effects of inosine on glycolysis and contractu...</td>\n",
+       "      <td>cardiovascular diseases</td>\n",
+       "      <td>effects of inosine on glycolysis and contractu...</td>\n",
+       "      <td>cardiovascular diseases</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>the contribution of routine follow-up mammogra...</td>\n",
        "      <td>neoplasms</td>\n",
-       "      <td>the relationship of high‑risk mammographic pat...</td>\n",
+       "      <td>the contribution of routine follow-up mammogra...</td>\n",
        "      <td>neoplasms</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>heterotopic tissue in lymph nodes. an unrecogn...</td>\n",
-       "      <td>general pathological conditions</td>\n",
-       "      <td>heterotopic tissue in lymph nodes. an unrecogn...</td>\n",
-       "      <td>general pathological conditions</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>paf-acether synthesis by helicobacter pylori. ...</td>\n",
-       "      <td>digestive system diseases</td>\n",
-       "      <td>paf-acether synthesis by helicobacter pylori...</td>\n",
-       "      <td>digestive system diseases</td>\n",
+       "      <th>18</th>\n",
+       "      <td>induction of dna fragmentation in chronic b-ly...</td>\n",
+       "      <td>neoplasms</td>\n",
+       "      <td>induction of dna fragmentation in chronic b-ly...</td>\n",
+       "      <td>neoplasms</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -578,27 +583,22 @@
       ],
       "text/plain": [
        "                                   medical_abstract_x  \\\n",
-       "59  the relationship of \"high risk\" mammographic p...   \n",
-       "47  heterotopic tissue in lymph nodes. an unrecogn...   \n",
-       "80  paf-acether synthesis by helicobacter pylori. ...   \n",
+       "65  effects of inosine on glycolysis and contractu...   \n",
+       "6   the contribution of routine follow-up mammogra...   \n",
+       "18  induction of dna fragmentation in chronic b-ly...   \n",
        "\n",
-       "                     condition_name  \\\n",
-       "59                        neoplasms   \n",
-       "47  general pathological conditions   \n",
-       "80        digestive system diseases   \n",
+       "             condition_name  \\\n",
+       "65  cardiovascular diseases   \n",
+       "6                 neoplasms   \n",
+       "18                neoplasms   \n",
        "\n",
-       "                                   medical_abstract_y  \\\n",
-       "59  the relationship of high‑risk mammographic pat...   \n",
-       "47  heterotopic tissue in lymph nodes. an unrecogn...   \n",
-       "80    paf-acether synthesis by helicobacter pylori...   \n",
-       "\n",
-       "              condition_name_output  \n",
-       "59                        neoplasms  \n",
-       "47  general pathological conditions  \n",
-       "80        digestive system diseases  "
+       "                                   medical_abstract_y    condition_name_output  \n",
+       "65  effects of inosine on glycolysis and contractu...  cardiovascular diseases  \n",
+       "6   the contribution of routine follow-up mammogra...                neoplasms  \n",
+       "18  induction of dna fragmentation in chronic b-ly...                neoplasms  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 12,
    "id": "43b443c8",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 13,
    "id": "4686183d",
    "metadata": {},
    "outputs": [
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 14,
    "id": "7625b416",
    "metadata": {},
    "outputs": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 15,
    "id": "ab1c63a1",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 16,
    "id": "93755806",
    "metadata": {},
    "outputs": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 17,
    "id": "cc0a9b0e",
    "metadata": {},
    "outputs": [
